Sam's aboutus bio

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -28,7 +28,9 @@
     </div>
     <div id="sam">
       <h2>Sam:</h2>
-      <p></p>
+      <p>Sam Falberg is a professional athlete and international superstar. He has donated billions to charity,
+        and is revered for his wit, charm, and good looks. Also, he once beat Ethan Mann in a pushup contest.</p>
+      <img id='samPic' src='https://i.imgur.com/JY072Ny.png' />
     </div>
   </body>
 </html>
