--- a/templates/details.html
+++ b/templates/details.html
@@ -30,6 +30,7 @@
     <div>
       <h2 id="news">News:</h2>
     </div>
+    <button type="button">Add to Favorites</button>
     <div id="social">
       <h4>Social Media:</h4>
     </div>
