--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -94,6 +94,7 @@ li a.active {
   padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 20px;
+  padding-right: 20px;
   border: 3px solid #e8e8e8;
   margin-left: 50px;
   margin-right: 50px;
@@ -106,6 +107,7 @@ li a.active {
   padding-bottom: 50px;
   padding-top: 50px;
   padding-left: 20px;
+  padding-right: 20px;
   border: 3px solid #e8e8e8;
   margin-left: 50px;
   margin-right: 50px;
