--- a/templates/details.html
+++ b/templates/details.html
@@ -27,8 +27,9 @@
     <div>
       <h2 id="charity_cause">Charity Cause: <span id='cause'></span></h2>
     </div>
-    <div>
-      <h2 id="news">News:</h2>
+    <div id="news">
+      <h2>News: </h2>
+      <div id="charityArticle"></div>
     </div>
     <div id="social">
       <h4>Social Media:</h4>
