--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -2,6 +2,9 @@
   <head>
     <link rel="stylesheet" href="/static/styles/favorites.css">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="/static/api.js"></script>
+    <script src="/static/details.js"></script>
   </head>
 
   <body>
@@ -17,7 +20,7 @@
     <table>
       <tr id="firstRow">
         <td>Charity</td>
-        <td>Star Rating</td>
+        <td>Website</td>
         <td >Deductibility</td>
       </tr>
       {% for charity in charities %}
