News API works + CSS styling

--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -1,24 +1,30 @@
 /* nav bar */
 h1 {
-  font-size: 50px;
-  /* color:  #ffce00; */
-  color: #07deff;
-  font-family: 'Roboto', sans-serif;
+  font-size: 60px;
+  color: #000080;
   font-weight: 200;
+  font-family: 'Trajan';
+  text-align: center;
 }
 
 h2 {
   font-family: 'Roboto', sans-serif;
-  font-weight: 200;
-  color: #07deff;
-  font-size: 40px
+  font-weight: 400px;
+  color: #07b4ff;
+  font-size: 30px;
+  line-height: 40px;
+}
+
+#cause {
+  font-weight: lighter;
+  font-style: italic;
 }
 
 h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
   font-size: 30px;
-  color: #ffce00;
+  color: green;
 }
 
 h4 {
@@ -63,6 +69,15 @@ li a.active {
 }
 
 #name {
+  border: 3px solid #e8e8e8;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 60px;
+  display: block;
+  background-color: #e8e8e8;
+}
+
+#info {
   padding-bottom: 30px;
   padding-top: 30px;
   padding-left: 20px;
@@ -72,22 +87,6 @@ li a.active {
   margin-top: 60px;
   display: block;
   background-color: #e8e8e8;
-}
-
-#website_ded {
-  padding-bottom: 30px;
-  padding-top: 30px;
-  padding-left: 20px;
-  border: 3px solid #e8e8e8;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 60px;
-  display: block;
-  background-color: #e8e8e8;
-}
-
-#star_rating {
-  padding-bottom: 30px;
 }
 
 #charity_cause {
@@ -104,8 +103,8 @@ li a.active {
 }
 
 #news {
-  padding-bottom: 50px;
-  padding-top: 50px;
+  padding-bottom: 25px;
+  padding-top: 10px;
   padding-left: 20px;
   padding-right: 20px;
   border: 3px solid #e8e8e8;
@@ -116,15 +115,8 @@ li a.active {
   background-color: #e8e8e8;
 }
 
-#social {
-  padding-bottom: 20px;
-  padding-left: 40px;
-  display: block;
-  margin-top: 90%;
-}
-
 #website:link {
-    color: green;
+    color: blue;
     background-color: transparent;
     text-decoration: none;
 }
