--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -48,7 +48,7 @@ body {
 }
 
 #sam {
-  padding-bottom: 200px;
+  padding-bottom: 20px;
   padding-left: 20px;
   padding-right: 20px;
   border: 3px solid #afaeae;
@@ -60,8 +60,10 @@ body {
 }
 
 #samPic {
-  width: 90%;
-  height: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 
