--- a/templates/details.html
+++ b/templates/details.html
@@ -18,23 +18,22 @@
       <li><a href="/aboutus">About Us</a></li>
     </ul>
     <div id="name">
-      <h1>Charity Name: <span id='charityName'></span></h1>
-    </div>
-    <div id="website_ded">
-      <h3>Website: <a id='website' href=></a></h3>
-      <h3>Deductibility: <span id='deductibility'></span></h3>
+      <h1><span id='charityName'></span></h1>
     </div>
     <div>
       <h2 id="charity_cause">Charity Cause: <span id='cause'></span></h2>
+    </div>
+    <div id="info">
+      <h3>Website: <a id='website' href=></a></h3>
+      <h3>Phone Number: <span id='number'></span></h3>
+      <h3>Address: <span id='address'></span></h3>
+      <h3>Deductibility: <span id='deductibility'></span></h3>
     </div>
     <div id="news">
       <h2>News: </h2>
       <div id="charityArticle"></div>
     </div>
     <button type="button">Add to Favorites</button>
-    <div id="social">
-      <h4>Social Media:</h4>
-    </div>
 
     {% for charity in allCharities %}
       <h1>{{charity.name}}</h1>
