added images to aboutus

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -17,14 +17,17 @@
     <div id="mariam">
       <h2>Mariam:</h2>
       <p></p>
+      <img id='mariamPic' src='https://i.imgur.com/iUfYfTQ.png' />
     </div>
     <div id="isabella">
       <h2>Isabella:</h2>
       <p></p>
+      <img id='isabellaPic' src='https://i.imgur.com/KDdUfAN.png' />
     </div>
     <div id="walter">
       <h2>Walter:</h2>
       <p></p>
+      <img id='walterPic' src='https://i.imgur.com/MOqlK85.png' />
     </div>
     <div id="sam">
       <h2>Sam:</h2>
