--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -20,15 +20,22 @@ body {
 }
 
 #mariam {
-  padding-bottom: 200px;
+  padding-bottom: 20px;
   padding-left: 20px;
   border: 3px solid #afaeae;
   margin-right: 60%;
   display: block;
 }
 
+#mariamPic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 #isabella {
-  padding-bottom: 200px;
+  padding-bottom: 20px;
   padding-left: 20px;
   padding-right: 20px;
   border: 3px solid #afaeae;
@@ -38,13 +45,27 @@ body {
   margin-top: 0%;
 }
 
+#isabellaPic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 #walter {
-  padding-bottom: 200px;
+  padding-bottom: 20px;
   padding-left: 20px;
   border: 3px solid #afaeae;
   margin-right: 60%;
   margin-top: 10%;
   display: block;
+}
+
+#walterPic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 #sam {
