--- a/templates/details.html
+++ b/templates/details.html
@@ -16,6 +16,7 @@
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
       <li><a href="/aboutus">About Us</a></li>
+      <li><a class="logout" href="{{logoutUrl}}">Log Out</a></li>
     </ul>
     <div id="name">
       <h1><span id='charityName'></span></h1>
@@ -40,8 +41,5 @@
       <input type="hidden" name="charity" value="{{ein}}">
       <button id="favorite" type="submit">Add to Favorites</button>
     </form>
-    <div id="social">
-      <h4>Social Media:</h4>
-    </div>
   </body>
  </html>
