--- a/templates/history.html
+++ b/templates/history.html
@@ -13,6 +13,7 @@
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
       <li><a href="/aboutus">About Us</a></li>
+      <li><a class="logout" href="{{logoutUrl}}">Log Out</a></li>
     </ul>
   <h1> Donation History </h1>
   <p> Keep a record of all the charities you have donated to below.
