--- a/templates/search.html
+++ b/templates/search.html
@@ -16,6 +16,7 @@
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
       <li><a href="/aboutus">About Us</a></li>
+      <li><a class="logout" href="{{logoutUrl}}">Log Out</a></li>
     </ul>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
