--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -27,7 +27,7 @@
     </div>
     <div id="walter">
       <h2>Walter:</h2>
-      <p></p>
+      <p>Walter is a student at the Univerity of Illinois at Urbana Champaign</p>
       <img id='walterPic' src='https://i.imgur.com/MOqlK85.png' />
     </div>
     <div id="sam">
