--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -25,6 +25,7 @@ body {
   border: 3px solid #afaeae;
   margin-right: 60%;
   display: block;
+  text-align: center;
 }
 
 #mariamPic {
@@ -42,7 +43,8 @@ body {
   display: block;
   right: 0;
   margin-left: 60%;
-  margin-top: 0%;
+  /* margin-top: 0%; */
+  text-align: center;
 }
 
 #isabellaPic {
@@ -57,8 +59,8 @@ body {
   padding-left: 20px;
   border: 3px solid #afaeae;
   margin-right: 60%;
-  margin-top: 10%;
   display: block;
+  text-align: center;
 }
 
 #walterPic {
@@ -74,10 +76,11 @@ body {
   padding-right: 20px;
   border: 3px solid #afaeae;
   right: 0;
-  display: inline-block;
+  display: block;
   margin-left: 60%;
   display: block;
-  margin-top: 0px;
+  /* margin-top: 0px; */
+  text-align: center;
 }
 
 #samPic {
