--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -18,21 +18,23 @@
     <div id="mariam">
       <h2>Mariam:</h2>
       <p></p>
-      <img id='mariamPic' src='https://i.imgur.com/iUfYfTQ.png' />
+      <img id='mariamPic' src='https://i.imgur.com/KDdUfAN.png' />
     </div>
     <div id="isabella">
       <h2>Isabella:</h2>
       <p></p>
-      <img id='isabellaPic' src='https://i.imgur.com/KDdUfAN.png' />
+      <img id='isabellaPic' src='https://i.imgur.com/iUfYfTQ.png' />
     </div>
     <div id="walter">
       <h2>Walter:</h2>
-      <p>Walter is a student at the Univerity of Illinois at Urbana Champaign</p>
+      <p>Walter is a student at the Univerity of Illinois at Urbana Champaign.</p>
       <img id='walterPic' src='https://i.imgur.com/MOqlK85.png' />
     </div>
     <div id="sam">
       <h2>Sam:</h2>
-      <p>Sam Falberg is a professional athlete and international superstar. He has donated billions to charity,
+      <p>Sam Falberg will be attending Fordham University this fall to study computer science.
+        His moral support comes from his dog, Cleo, and his cat, Quincy.
+        Sam is a professional athlete and international superstar. He has donated billions to charity,
         and is revered for his wit, charm, and good looks. Also, he once beat Ethan Mann in a pushup contest.</p>
       <img id='samPic' src='https://i.imgur.com/JY072Ny.png' />
     </div>
