Alert when charity added to favorites

--- a/templates/history.html
+++ b/templates/history.html
@@ -20,7 +20,7 @@
   <p> Keep a record of all the charities you have donated to below.
         <form method="post" onsubmit="return validateForm()">
     <ul id="listOfInputs">
-    <li id="firstInput">Charity: <input type="text" name="charityName"></li>
+    <li id="firstInput">Charity: <input type="text" name="charityName" placeholder="Enter name here"></li>
     <li class="inputs">Amount Donated: <input type="text" name="amountDonated" placeholder="Enter without currency"></li>
     <li class="inputs">Date of Donation: <input type="text" name="dateDonated" placeholder="mm/dd/yyyy"></li>
     <input class="inputs" id="submitButton" type="submit">
