--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -22,7 +22,7 @@
     </div>
     <div id="isabella">
       <h2>Isabella:</h2>
-      <p>Isabella is a students at University of Illinois Urbana-Champaign, studying Computer Science + Anthropology.</p>
+      <p>Isabella is a student at University of Illinois Urbana-Champaign, studying Computer Science + Anthropology.</p>
       <img id='isabellaPic' src='https://i.imgur.com/iUfYfTQ.png' />
     </div>
     <div id="walter">
