delete buttons work

--- a/templates/are_you_sure_favs.html
+++ b/templates/are_you_sure_favs.html
@@ -6,8 +6,8 @@
     <form method="Post">
       <div>Are you sure you want to delete this charity?</div>
       <input type="hidden" name="charity_id" value="{{charity_id}}">
-      <input type="submit" value="Yes">
-      <input type="submit" value="No">
+      <input type="submit" name="submit" value="Yes">
+      <input type="submit" name="submit" value="No">
     </form>
   </body>
 </html>
