--- a/templates/search.html
+++ b/templates/search.html
@@ -26,5 +26,9 @@
     <div id="resultPane" style='display:none'>
       <div id="result"</div>
     </div>
+    <!-- <div id='logo'>
+      <h1>Charity Finder</h1>
+      <h5>Your journey to make the world a better place starts here</h5>
+    </div> -->
   </body>
 </html>
