--- a/templates/you_sure.html
+++ b/templates/you_sure.html
@@ -5,6 +5,7 @@
     <form method="post">
       <div>Are you sure you want to delete that entry?</div>
       <input type="hidden" name="charity_id" value="{{charity_id}}">
-      <input type="submit" value="Yes">
+      <input type="submit" name='submit' value="Yes">
+      <input type="submit" name="submit" value="No">
   </body>
 </html>
