--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,6 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/static/api.js"></script>
     <script src="/static/details.js"></script>
+    <title>Favorites</title>
   </head>
 
   <body>
