--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="/static/styles/aboutus.css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet">
+    <title>About Us</title>
   </head>
 
   <body>
@@ -17,7 +18,7 @@
     <h1>Dreamy Developers</h1>
     <div id="mariam">
       <h2>Mariam:</h2>
-      <p></p>
+      <p>Mariam is a student at Northwestern University.</p>
       <img id='mariamPic' src='https://i.imgur.com/KDdUfAN.png' />
     </div>
     <div id="isabella">
@@ -32,7 +33,7 @@
     </div>
     <div id="sam">
       <h2>Sam:</h2>
-      <p>Sam Falberg will be attending Fordham University this fall to study computer science.
+      <p>Sam Falberg is a computer science student at Fordham University.
         His moral support comes from his dog, Cleo, and his cat, Quincy.
         Sam is a professional athlete and international superstar. He has donated billions to charity,
         and is revered for his wit, charm, and good looks. Also, he once beat Ethan Mann in a pushup contest.</p>
