--- a/templates/details.html
+++ b/templates/details.html
@@ -7,6 +7,7 @@
     <script>var einLookup={{ein}}</script>
     <script src="/static/api.js"></script>
     <script src="/static/details.js"></script>
+    <title>Details</title>
   </head>
 
   <body>
