css files created
html files renamed

--- a/templates/delete_history.html
+++ b/templates/delete_history.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="/static/styles/delete_history.css">
   </head>
   <body>
     <form method="post">
