delete html pages both linked to the same css

--- a/templates/delete_history.html
+++ b/templates/delete_history.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/static/styles/delete_history.css">
+    <link rel="stylesheet" href="/static/styles/delete_page.css">
   </head>
   <body>
     <form method="post">
@@ -8,5 +8,6 @@
       <input type="hidden" name="charity_id" value="{{charity_id}}">
       <input type="submit" name='submit' value="Yes">
       <input type="submit" name="submit" value="No">
+    </form>
   </body>
 </html>
