adjusted about us css

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -17,22 +17,22 @@
     </ul>
     <h1>Dreamy Developers</h1>
     <div id="mariam">
-      <h2>Mariam:</h2>
+      <h2>Mariam</h2>
       <p>Mariam is a student at Northwestern University.</p>
       <img id='mariamPic' src='https://i.imgur.com/KDdUfAN.png' />
     </div>
     <div id="isabella">
-      <h2>Isabella:</h2>
+      <h2>Isabella</h2>
       <p>Isabella is a student at University of Illinois Urbana-Champaign, studying Computer Science + Anthropology.</p>
       <img id='isabellaPic' src='https://i.imgur.com/iUfYfTQ.png' />
     </div>
     <div id="walter">
-      <h2>Walter:</h2>
+      <h2>Walter</h2>
       <p>Walter is a student at the Univerity of Illinois at Urbana Champaign.</p>
       <img id='walterPic' src='https://i.imgur.com/MOqlK85.png' />
     </div>
     <div id="sam">
-      <h2>Sam:</h2>
+      <h2>Sam</h2>
       <p>Sam Falberg is a computer science student at Fordham University.
         His moral support comes from his dog, Cleo, and his cat, Quincy.
         Sam is a professional athlete and international superstar. He has donated billions to charity,
