--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -12,11 +12,18 @@ h2 {
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
   color: #07deff;
+  font-size: 40;
+  text-transform: uppercase;
+  /* border-bottom: 2px solid #07deff;
+  width: fit-content;
+  align-content: center; */
 }
 
 body {
  font-family: 'Roboto', sans-serif;
  font-weight: 200;
+ font-size: 20;
+ color: gray;
 }
 
 #mariam {
