--- a/templates/search.html
+++ b/templates/search.html
@@ -11,6 +11,7 @@
     </title>
   <head>
   <body>
+    <div>
     <ul>
       <li><a href="/">Search for a Charity</a></li>
       <li><a href="/favorites">My Favorites</a></li>
@@ -18,6 +19,9 @@
       <li><a href="/aboutus">About Us</a></li>
       <li><a class="logout" href="{{logoutUrl}}">Log Out</a></li>
     </ul>
+  </div>
+  <div id="logoSpace">
+  </div>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
         <input id="queryBox" type="text" name="searchQuery" placeholder="Find a Charity...">
