--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -28,7 +28,7 @@
     </div>
     <div id="walter">
       <h2>Walter</h2>
-      <p>Walter is a student at the Univerity of Illinois at Urbana Champaign.</p>
+      <p>Walter is a student at the Univerity of Illinois at Urbana Champaign. He will be majoring in Computer Engineering.</p>
       <img id='walterPic' src='https://i.imgur.com/MOqlK85.png' />
     </div>
     <div id="sam">
