--- a/static/styles/delete_page.css
+++ b/static/styles/delete_page.css
@@ -1,1 +1,42 @@
+#delete {
+  color: black;
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  z-index: 15;
+  top: 45%;
+  left: 50%;
+  margin: -100px 0 0 -150px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 23px;
+}
 
+h3 {
+  text-align: center;
+}
+
+#buttons {
+  color: blue;
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  z-index: 15;
+  top: 100%;
+  left: 70%;
+  margin: -100px 0 0 -150px;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #22cc4a;
+  color: white;
+}
