--- a/templates/delete_favs.html
+++ b/templates/delete_favs.html
@@ -4,10 +4,14 @@
   </head>
   <body>
     <form method="Post">
-      <div>Are you sure you want to delete this charity?</div>
-      <input type="hidden" name="charity_id" value="{{charity_id}}">
-      <input type="submit" name="submit" value="Yes">
-      <input type="submit" name="submit" value="No">
+      <div id='delete'>
+        <h3>Are you sure you want to delete this charity?</h3>
+        <input type="hidden" name="charity_id" value="{{charity_id}}">
+        <div id='buttons'>
+          <input type="submit" name="submit" value="Yes">
+          <input type="submit" name="submit" value="No">
+        </div>
+      </div>
     </form>
   </body>
 </html>
