--- a/templates/history.html
+++ b/templates/history.html
@@ -21,7 +21,7 @@
         <form method="post" onsubmit="return validateForm()">
     <ul id="listOfInputs">
     <li id="firstInput">Charity: <input type="text" name="charityName" placeholder="Enter name here"></li>
-    <li class="inputs">Amount Donated: <input type="text" name="amountDonated" placeholder="Enter without currency"></li>
+    <li class="inputs">Amount Donated: <input type="number" step='.01' min='.01' name="amountDonated" placeholder="Enter without currency"></li>
     <li class="inputs">Date of Donation: <input type="text" name="dateDonated" placeholder="mm/dd/yyyy"></li>
     <input class="inputs" id="submitButton" type="submit">
   </ul>
@@ -35,7 +35,7 @@
           {% for donation in donations %}
           <tr>
             <td>{{donation.charityName}}</td>
-            <td>{{donation.amountDonated}}</td>
+            <td>${{donation.amountDonated}}</td>
             <td>{{donation.dateDonated}}</td>
             <td><a href="/delete?charity_id={{donation.key.urlsafe()}}">Delete</a></td>
           </tr>
