--- a/templates/history.html
+++ b/templates/history.html
@@ -22,7 +22,7 @@
     <ul id="listOfInputs">
     <li id="firstInput">Charity: <input type="text" name="charityName" placeholder="Enter name here"></li>
     <li class="inputs">Amount Donated: <input type="number" step='.01' min='.01' name="amountDonated" placeholder="Enter without currency"></li>
-    <li class="inputs">Date of Donation: <input type="text" name="dateDonated" placeholder="mm/dd/yyyy"></li>
+    <li class="inputs">Date of Donation: <input type="date" name="dateDonated"></li>
     <input class="inputs" id="submitButton" type="submit">
   </ul>
         </form>
