Added placeholder for logo

--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -82,4 +82,14 @@ body {
   width: auto;
   background-color: white;
   margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+img {
+  position: sticky;
+  display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50
+    width: 20%;
 }
