--- a/templates/search.html
+++ b/templates/search.html
@@ -21,6 +21,7 @@
     </ul>
   </div>
   <div id="logoSpace">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReyIJecyRXPLIm8HzrdKtZZ8HSTxcgY0Q0BFs3MjSzw1rRD8reQw">
   </div>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
