--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -36,7 +36,8 @@
       <p>Sam Falberg is a computer science student at Fordham University.
         His moral support comes from his dog, Cleo, and his cat, Quincy.
         Sam is a professional athlete and international superstar. He has donated billions to charity,
-        and is revered for his wit, charm, and good looks. Also, he once beat Ethan Mann in a pushup contest.</p>
+        and is revered for his wit, charm, and good looks. Also, he once beat Ethan Mann in a pushup contest.
+        Follow him on Instagram <a href='https://www.instagram.com/samfalberg/' target="_blank">@samfalberg</a> for some epic shoe pics.</p>
       <img id='samPic' src='https://i.imgur.com/JY072Ny.png' />
     </div>
   </body>
