finished history css

--- a/templates/history.html
+++ b/templates/history.html
@@ -22,7 +22,7 @@
       <ul id="listOfInputs">
         <li id="firstInput" class="headers">Charity: <input type="text" name="charityName" placeholder="Enter name here"></li>
         <li class="inputs, headers">Amount Donated: <input type="number" step='.01' min='.01' name="amountDonated" placeholder="Enter without currency"></li>
-        <li class="inputs, headers">Date of Donation: <input type="date" name="dateDonated"></li>
+        <li id="date" class="inputs, headers">Date of Donation: <input type="date" name="dateDonated"></li>
         <input class="inputs" id="submitButton" type="submit">
       </ul>
     </form>
@@ -37,7 +37,7 @@
           <td>{{donation.charityName}}</td>
           <td>${{donation.amountDonated}}</td>
           <td>{{donation.dateDonated}}</td>
-          <td><a href="/delete?charity_id={{donation.key.urlsafe()}}">Delete</a></td>
+          <td><a href="/delete?charity_id={{donation.key.urlsafe()}}" id="button">Delete</a></td>
         </tr>
         {% endfor %}
       </table>
