--- a/static/styles/history.css
+++ b/static/styles/history.css
@@ -39,7 +39,7 @@ th, td {
   color: white;
   text-transform: uppercase;
   width: 100px;
-  height:20px;
+  height:30px;
   border: none;
   /* padding: 11px 20px; */
   text-align: center;
@@ -114,12 +114,26 @@ body {
   font-size: 20;
   margin-left: 5px;
   color: gray;
-  margin-top: 5px;
+  margin-top: 7px;
   margin-bottom: 5px;
 }
 
 input {
   padding-top: 2px;
   padding-bottom: 2px;
-  margin-top: 5px;
+  margin-top: 0px;
+}
+
+#date {
+  margin-bottom: 15px;
+  margin-top: 7px;
+}
+
+#button {
+  display: block;
+  background: #ffce00;
+  padding: 5px;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
 }
