added logo to main page

--- a/templates/search.html
+++ b/templates/search.html
@@ -22,7 +22,7 @@
   </div>
   <div id="logoSpace">
     <!--Placeholder image-->
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReyIJecyRXPLIm8HzrdKtZZ8HSTxcgY0Q0BFs3MjSzw1rRD8reQw">
+    <img src="/static/charity_connect.jpg">
   </div>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
