--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -5,7 +5,7 @@
   /* margin-top: -50px;
   margin-left: -190px; */
   margin-left: 32%;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 button {
@@ -78,11 +78,11 @@ body {
 }
 
 #logoSpace {
-  height: 150px;
+  display: flex;
   width: auto;
   background-color: white;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 img {
@@ -90,6 +90,6 @@ img {
   display: flex;
     margin-left: auto;
     margin-right: auto;
-    width: 50
-    width: 20%;
+    min-width: auto;
+    min-height: auto;
 }
