--- a/static/styles/delete_page.css
+++ b/static/styles/delete_page.css
@@ -1,5 +1,5 @@
 #delete {
-  color: black;
+  color: gray;
   position: absolute;
   width: 300px;
   height: 200px;
@@ -13,6 +13,7 @@
 
 h3 {
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 #buttons {
@@ -22,21 +23,24 @@ h3 {
   height: 200px;
   z-index: 15;
   top: 100%;
-  left: 70%;
+  left: 65%;
   margin: -100px 0 0 -150px;
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: #ffce00;
   border: none;
   color: white;
+  font-size: 20;
   padding: 16px 32px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
 }
 
 input[type=submit]:hover {
-  background-color: #22cc4a;
+  background-color: #ffb200;
   color: white;
 }
