--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -147,6 +147,7 @@ li a.active {
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
+  text-transform: uppercase;
 }
 
 #favorite:hover {
