no results bug fix

--- a/templates/history.html
+++ b/templates/history.html
@@ -20,8 +20,8 @@
     <p> Keep a record of all the charities you have donated to below.</p>
     <form method="post" onsubmit="return validateForm()">
       <ul id="listOfInputs">
-        <li id="firstInput" class="headers">Charity: <input type="text" name="charityName" placeholder="Enter name here"></li>
-        <li class="inputs, headers">Amount Donated: <input type="number" step='.01' min='.01' name="amountDonated" placeholder="Enter without currency"></li>
+        <li id="firstInput" class="headers">Charity: <input type="text" name="charityName"></li>
+        <li class="inputs, headers">Amount Donated: <input type="number" step='.01' min='.01' name="amountDonated"></li>
         <li class="inputs, headers">Date of Donation: <input type="date" name="dateDonated"></li>
         <input class="inputs" id="submitButton" type="submit">
       </ul>
