--- a/templates/search.html
+++ b/templates/search.html
@@ -24,7 +24,6 @@
     <!--Placeholder image-->
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReyIJecyRXPLIm8HzrdKtZZ8HSTxcgY0Q0BFs3MjSzw1rRD8reQw">
   </div>
-    <!-- <div id="loader" style='display:none'></div> -->
     <div class="sk-cube-grid" style='display:none'>
       <div class="sk-cube sk-cube1"></div>
       <div class="sk-cube sk-cube2"></div>
@@ -42,6 +41,7 @@
     </div>
     <div id="resultPane" style='display:none'>
       <div id="result"</div>
+      <div id="error"</div>
     </div>
   </body>
 </html>
