--- a/static/styles/favorites.css
+++ b/static/styles/favorites.css
@@ -60,14 +60,20 @@ h1 {
 
 p {
   color: #07deff;
-  font-size: 30;
+  font-size: 23px;
+  font-weight: bold;
 }
 
 .button {
   display: block;
-  background: #ffce00;
+  background: #ffaa00;
   padding: 5px;
   text-align: center;
   color: white;
   text-transform: uppercase;
+}
+
+.button:hover {
+    background-color: #4CAF50;
+    color: white;
 }
