--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -51,27 +51,15 @@ input {
   margin-right:3%;
 }
 
-/* #loader {
-  position: fixed;
-  top: 65%;
-  left: 47%;
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid blue;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 2s linear infinite;
+#error {
+  /* position: absolute; */
+  top: 50%;
+  left: 50%;
+  right: 3%;
+  padding-top: 2%;
+  margin-left:3%;
+  margin-right:3%;
 }
-
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-} */
 
 .sk-cube-grid {
   position: fixed;
