--- a/static/styles/favorites.css
+++ b/static/styles/favorites.css
@@ -66,7 +66,7 @@ p {
 
 .button {
   display: block;
-  background: #ffaa00;
+  background: #ffce00;
   padding: 5px;
   text-align: center;
   color: white;
