no result bug fix

--- a/templates/search.html
+++ b/templates/search.html
@@ -40,8 +40,11 @@
         <button id="submit">Search</button>
     </div>
     <div id="resultPane" style='display:none'>
-      <div id="result"</div>
-      <div id="error"</div>
+      <div id="result"></div>
+      <!-- <div id="error"</div> -->
+    </div>
+    <div id='errorPane' style='display:none'>
+      <div id="error"></div>
     </div>
   </body>
 </html>
